cabal-version: 1.12

name:           unboxing-vector
version:        0.2.0.0
synopsis:       A newtype-friendly variant of unboxed vectors
description:    Please see the README on GitHub at <https://github.com/minoki/unboxing-vector#readme>
category:       Data, Data Structures
homepage:       https://github.com/minoki/unboxing-vector#readme
bug-reports:    https://github.com/minoki/unboxing-vector/issues
author:         ARATA Mizuki <minorinoki@gmail.com>
maintainer:     ARATA Mizuki <minorinoki@gmail.com>
copyright:      2020 ARATA Mizuki
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/minoki/unboxing-vector

flag mono-traversable
  description: Define instances for MonoTraversable
  manual: True
  default: True

library
  exposed-modules:
      Data.Vector.Unboxing
      Data.Vector.Unboxing.Mutable
  other-modules:
      Data.Vector.Unboxing.Internal
      Data.Vector.Unboxing.Instances
  hs-source-dirs:
      src
  ghc-options: -Wall
  -- Data.Semigroup is available since 4.9.0.0
  build-depends:
      base >=4.9 && <5
    , deepseq
    , primitive
    , vector >=0.12 && <0.14
  if flag(mono-traversable)
    cpp-options: -DENABLE_MONO_TRAVERSABLE
    build-depends:
        mono-traversable
  default-language: Haskell2010

test-suite unboxing-vector-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Foo
      TestTypeErrors
  hs-source-dirs:
      test
  ghc-options: -Wall -Wno-missing-signatures
  build-depends:
      HUnit
    , base >=4.9 && <5
    , deepseq
    , primitive
    , should-not-typecheck
    , unboxing-vector
    , vector
  if flag(mono-traversable)
    cpp-options: -DENABLE_MONO_TRAVERSABLE
    build-depends:
        mono-traversable
  default-language: Haskell2010

-- DerivingVia is available since GHC 8.6
test-suite unboxing-vector-test-deriving-via
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Enum
      Foo
      Generic
      TestTypeErrors
  hs-source-dirs:
      test-deriving-via
  ghc-options: -Wall -Wno-missing-signatures
  build-depends:
      HUnit
    , base >=4.9 && <5
    , deepseq
    , primitive
    , should-not-typecheck
    , unboxing-vector
    , vector
  if flag(mono-traversable)
    cpp-options: -DENABLE_MONO_TRAVERSABLE
    build-depends:
        mono-traversable
  if impl(ghc >= 8.6.1)
    buildable: True
  else
    buildable: False
  default-language: Haskell2010

-- GND with associated type families is available since GHC 8.2
test-suite unboxing-vector-test-gnd
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Foo
  hs-source-dirs:
      test-gnd
  ghc-options: -Wall -Wno-missing-signatures
  build-depends:
      HUnit
    , base >=4.9 && <5
    , deepseq
    , primitive
    , unboxing-vector
    , vector
  if flag(mono-traversable)
    cpp-options: -DENABLE_MONO_TRAVERSABLE
    build-depends:
        mono-traversable
  if impl(ghc >= 8.2.1)
    buildable: True
  else
    buildable: False
  default-language: Haskell2010

benchmark unboxing-vector-benchmark
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  other-modules:
      Poly
  hs-source-dirs:
      benchmark
  ghc-options: -Wall -rtsopts
  build-depends:
      base >=4.9 && <5
    , deepseq
    , primitive
    , unboxing-vector
    , vector
  if flag(mono-traversable)
    cpp-options: -DENABLE_MONO_TRAVERSABLE
    build-depends:
        mono-traversable
  -- Not buildable with GHC 8.0.2, due to "panic! (the 'impossible' happened)"
  if impl(ghc >= 8.2.1)
    buildable: True
  else
    buildable: False
  default-language: Haskell2010
